--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # basic options
-title: Kvasir Endoscopy Instrument
+title: Kvasir Instrument Segmentation Using UNet
 author: Sumit Pandey 
 email: sumit.ai.sci@gmail.com
 github_username:  Sumit-ai
